# eac2-django

./: README.md  db.sqlite3  pyproject.toml  requirements.txt
.github/workflows/: django.yml
my_django/: settings.py  urls.py
polls/: tests.py  views.py
polls/migrations/: 0001_initial.py
